crates/loxide_parser/snapshots/regression/output/issue15.snap
---
source: crates/loxide_parser/tests/regression/issue15.rs
expression: result
---
(
    [
        Block(
            [
                VarDeclaration(
                    Identifier {
                        name: "a",
                    },
                    Some(
                        Expr {
                            kind: Literal(
                                Number(
                                    1.0,
                                ),
                            ),
                            span: [Span],
                        },
                    ),
                ),
            ],
        ),
    ],
    [],
)
