crates/loxide_parser/snapshots/regression/output/issue18.snap
---
source: crates/loxide_parser/tests/regression/issue18.rs
expression: result
---
(
    [
        PrintStmt(
            Expr {
                kind: Variable(
                    Identifier {
                        name: "a",
                    },
                ),
            },
        ),
    ],
    [],
)
