crates/loxide_parser/snapshots/regression/output/issue6.snap
---
source: crates/loxide_parser/tests/regression/issue6.rs
expression: result
---
(
    [
        Expression(
            Expr {
                kind: Binary(
                    BinaryExpr {
                        lhs: Expr {
                            kind: Literal(
                                Number(
                                    2.0,
                                ),
                            ),
                            span: Span {
                                start: 0,
                                end: 1,
                            },
                        },
                        rhs: Expr {
                            kind: Literal(
                                Number(
                                    1.0,
                                ),
                            ),
                            span: Span {
                                start: 5,
                                end: 6,
                            },
                        },
                        operator: GreaterEqual,
                    },
                ),
                span: Span {
                    start: 0,
                    end: 6,
                },
            },
        ),
        Expression(
            Expr {
                kind: Binary(
                    BinaryExpr {
                        lhs: Expr {
                            kind: Literal(
                                Number(
                                    2.0,
                                ),
                            ),
                            span: Span {
                                start: 20,
                                end: 21,
                            },
                        },
                        rhs: Expr {
                            kind: Literal(
                                Number(
                                    1.0,
                                ),
                            ),
                            span: Span {
                                start: 24,
                                end: 25,
                            },
                        },
                        operator: Greater,
                    },
                ),
                span: Span {
                    start: 20,
                    end: 25,
                },
            },
        ),
    ],
    [],
)
