crates/loxide_parser/snapshots/regression/output/issue8.snap
---
source: crates/loxide_parser/tests/regression/issue8.rs
expression: result
---
(
    [
        Expression(
            Expr {
                kind: Binary(
                    BinaryExpr {
                        lhs: Expr {
                            kind: Literal(
                                Number(
                                    1.0,
                                ),
                            ),
                            span: [Span],
                        },
                        rhs: Expr {
                            kind: Literal(
                                Number(
                                    2.0,
                                ),
                            ),
                            span: [Span],
                        },
                        operator: Plus,
                    },
                ),
                span: [Span],
            },
        ),
        Expression(
            Expr {
                kind: Binary(
                    BinaryExpr {
                        lhs: Expr {
                            kind: Literal(
                                Number(
                                    3.0,
                                ),
                            ),
                            span: [Span],
                        },
                        rhs: Expr {
                            kind: Literal(
                                Number(
                                    4.0,
                                ),
                            ),
                            span: [Span],
                        },
                        operator: Plus,
                    },
                ),
                span: [Span],
            },
        ),
    ],
    [],
)
